Fixes static issues

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<br><br><br><br>
 
 		<div style="height:">
-			<h1 id="pedido">Queres ser o meu par?</h1>
+			<h1 id="pedido" style="font-size:80px;">Mulher, queres ser o meu par?</h1>
 			<br>
 		</div>
 
