Fixes presentations issues

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 		<br><br><br><br>
 
-		<div style="height:">
+		<div style="display:block; min-height:27vh">
 			<h1 id="pedido" style="font-size:80px;">Mulher, queres ser o meu par?</h1>
 			<br>
 		</div>
